# Yolo-Object-Detection-AdmyBrand

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  Workflow.md  docker-compose.yml  main.py  metrics_session_1755623894.json  metrics_session_1755626005.json  pyproject.toml  requirements.txt
certs/: cert.pem  key.pem
docs/: CAMERA_TROUBLESHOOTING.md  METRICS_SYSTEM.md  MOBILE_ACCESS.md  REORGANIZATION_COMPLETE.md  STATUS.md  STRUCTURE.md  instructions.md
scripts/: build-docker.bat  build-docker.sh  create_ssl_cert.py  docker-entrypoint.sh  export_model.py  mobile_setup.py  run-docker.bat  run-docker.sh  run.py  test.py
src/: __init__.py
src/server/: __init__.py  inference.py  interface.html  metrics.py  resources.py  signaling.py
src/web/: __init__.py
src/web/static/css/: style.css
src/web/static/js/: client.js  client_metrics.js  client_server_inference.js  client_wasm_inference.js
src/web/templates/: basic.html  camera_test.html  debug.html  enhanced_demo.html  index.html  index_wasm.html  realtime_demo.html  video_stream.html
