[project]
name = "webrtc-object-detection"
version = "0.1.0"
description = "Real-time object detection over WebRTC with server-side and client-side inference architectures"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "WebRTC Object Detection Team"},
]
keywords = ["webrtc", "object-detection", "yolo", "real-time", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.12.15",
    "aiortc>=1.13.0",
    "cryptography>=45.0.6",
    "gputil>=1.4.0",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "qrcode>=8.2",
    "ultralytics>=8.3.180",
    "websockets>=15.0.1",
]

[project.scripts]
webrtc-signaling = "src.server.signaling:main"
webrtc-inference = "src.server.inference:main"
export-model = "scripts.export_model:export_yolo_to_onnx"
run-demo = "scripts.run:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
